# fyrec

./: Cargo.toml  rustfmt.toml
src/: ast.rs  graph.rs  infer.rs  main.rs  parser.rs
